# zkb

./: .env.example  AGENTS.md  README.md  pyproject.toml  requirements-all.txt  requirements-data.txt  requirements-detect.txt  requirements-ocr.txt  requirements-train.txt  requirements.txt
data/: README.md  dataset_manifest.yaml
docs/: competition_day_runbook.md  dataset_registry.md  deployment_checklist.md  local_verification_checklist.md  model_setup.md  model_setup_detect.md  model_setup_ocr.md  online_answer_review.md  short_answer_templates.md  train_classify.md  train_detect.md  train_ocr.md  training_plan.md
models/: README.md  model_manifest.json
scripts/: auto_train_eval_classify.py  auto_train_eval_detect.py  convert_detection_dataset.py  download_models_optional.sh  download_openimages_subset.py  download_places365_subset.py  evaluate_classify.py  evaluate_contest_api.py  evaluate_detect.py  evaluate_ocr.py  export_best_models.py  generate_synthetic_ocr_dataset.py  package_submission.py  package_submission.sh  prepare_classify_dataset.py  prepare_detect_dataset.py  prepare_detect_model.py  prepare_ocr_model.py  run_server.sh  smoke_test.py  smoke_test.sh  train_classify.py  train_detect_yolo.py  train_ocr_paddle.py  verify_training_setup.py
tests/: conftest.py  test_auto_train_eval.py  test_classifier_backend.py  test_dataset_download_guards.py  test_dataset_registry.py  test_debug_status.py  test_evaluation_scripts.py  test_health.py  test_infer_classify.py  test_infer_detect.py  test_infer_ocr.py  test_package_submission.py  test_training_scripts.py  (+1 more)
(+53 files in other folders)
